--- a/HTML-Pages/courses.html
+++ b/HTML-Pages/courses.html
@@ -10,6 +10,13 @@
 <body>
     <div>
         <h1>Courses Offered</h1>
+        <label for="courses">Our Courses:</label>
+
+        <select name="courses" id="courses">
+            <option value="web">WebDev</option>
+            <option value="math">Math</option>
+            <option value="program">Programming</option>
+        </select>
         <div>
             <h2>Web Development</h2>
             <p><b>Description:</b> Learn the essentials of web design and development. This course covers
@@ -22,8 +29,15 @@
             </ul>
             <p><b>Target Audience:</b> Beginners and intermediates aspiring to build or design websites.</p>
             <p><b>Duration:</b> 8 weeks.</p>
+            <b>Cost:Rs.20000</b>
             <p><b>Resources:</b> <a href="https://www.w3schools.com/html" target="_blank">W3Schools
                     HTML Tutorials</a>, free templates and sample projects.</p>
+            <br>
+            <img src="../Course-Images/course1.jpg" alt="" height="200">
+            <br>
+            <button type="submit">Buy now</button>
+            <hr>
+            <br>
         </div>
 
         <div>
@@ -37,8 +51,16 @@
             </ul>
             <p><b>Target Audience:</b>Collage students</p>
             <p><b>Duration:</b> 6 weeks.</p>
+            <b>Cost:Rs.10000</b>
             <p><b>Resources:</b> 25 Beautiful Math Documentaries to Make Students Love Math <a
-                    href="https://abakcus.com/25-beautiful-math-documentaries-to-love-math/" target="_blank">Math Documentaries</a>.</p>
+                    href="https://abakcus.com/25-beautiful-math-documentaries-to-love-math/" target="_blank">Math
+                    Documentaries</a>.</p>
+            <br>
+            <img src="../Course-Images/course2.jfif" alt="" height="200">
+            <br>
+            <button type="submit">Buy now</button>
+            <hr>
+            <br>
         </div>
 
         <div>
@@ -52,12 +74,15 @@
             </ul>
             <p><b>Target Audience:</b> Absolute beginners.</p>
             <p><b>Duration:</b> 4 weeks.</p>
-            <b>Resources:</b> <a href="https://docs.python.org/3/" target="_blank">Python documentation ,</a> <a href="https://www.w3schools.com/java/default.asp">W3Schools Java Tutorials</a>
-        <br><br>
-        <img src="../Course-Images/course1.jpg" alt="" height="200">
-        <img src="../Course-Images/course2.jfif" alt="" height="200">
-        <img src="../Course-Images/course4.jfif" alt="" height="200">
-    </div>
+            <b>Cost:Rs.20000</b>
+            <b>Resources:</b> <a href="https://docs.python.org/3/" target="_blank">Python documentation ,</a> <a
+                href="https://www.w3schools.com/java/default.asp">W3Schools Java Tutorials</a>
+            <br><br><br>
+            <img src="../Course-Images/course4.jfif" alt="" height="200">
+            <br>
+            <button type="submit">Buy now</button>
+            <hr>
+        </div>
 
 
 
