--- a/HTML-Pages/index.html
+++ b/HTML-Pages/index.html
@@ -10,7 +10,6 @@
 <body>
     <div>
         <nav>
-            <h1>Welcome to "<i>Digital Guru</i>" offical website.</h1>
             <ul>
                 <li>
                     <h2><a href="courses.html" target="_parent">Courses</a> </h2>
@@ -25,9 +24,8 @@
             </ul>
         </nav>
         <br>
-        
-        <h2>Your Path to Knowledge Starts Here
-        </h2>
+        <h1>Welcome to "<i>Digital Guru</i>" offical website.</h1>
+        <h2>Your Path to Knowledge Starts Here</h2>
         <b>Welcome to Digital Guru, your go-to platform for personalized learning and skill enhancement. We are here to
             guide you every step of the way in your educational journey.</b>
         <p>At Digital Guru, we believe in empowering learners through personalized teaching and valuable resources.
@@ -35,7 +33,9 @@
         <img src="../Homepage-Images/homepage1.jpg=ws1280x960" alt="image" height="200">
         <img src="../Homepage-Images/homepage2.jpg" alt="image" height="200">
         <img src="../Homepage-Images/homepage3.jpg" alt="image" height="200">
-        <br>
+        <br><br><br>
+        <input type="email" name="email" id="email" placeholder="Enter email" required>
+        <button type="submit">Enroll Now</button>
         <h3><i>"Education is the most powerful weapon which you can use to change the world." – Nelson Mandela
             </i></h3>
     </div>
