Web-I_Assignment-II

--- a/HTML-Pages/about.html
+++ b/HTML-Pages/about.html
@@ -9,8 +9,9 @@
 
 <body>
     <div>
-        <h1>About Us</h1>
+        <h1>About us</h1>
         <h2>Meet your mentor</h2>
+        <img src="../About-Images/about_images3.jfif" alt="" height="200">
         <p>Hello, I’m Suman Pandey, the founder of "<b><i>Digital Guru</i></b>". With over 5 years of experience in teaching
             and a
             deep passion for education, I have dedicated myself to making learning accessible, engaging, and enjoyable
@@ -33,9 +34,8 @@
             remarkable success.
         </p>
         <br>
-        <img src="../About-Images/about1.jfif" alt="" height="200">
-        <img src="../About-Images/about2.jfif" alt="" height="200">
-        <img src="../About-Images/about3.jfif" alt="" height="200">
+        <img src="../About-Images/about_images1.jfif" alt="" height="200">
+        <img src="../About-Images/about_images2.jfif" alt="" height="200">
     </div>
 </body>
 
