--- a/HTML-Pages/courses.html
+++ b/HTML-Pages/courses.html
@@ -33,7 +33,7 @@
             <p><b>Resources:</b> <a href="https://www.w3schools.com/html" target="_blank">W3Schools
                     HTML Tutorials</a>, free templates and sample projects.</p>
             <br>
-            <img src="../Course-Images/course1.jpg" alt="" height="200">
+            <img src="../Course-Images/course_image1.jpg" alt="" height="200">
             <br>
             <button type="submit">Buy now</button>
             <hr>
@@ -56,7 +56,7 @@
                     href="https://abakcus.com/25-beautiful-math-documentaries-to-love-math/" target="_blank">Math
                     Documentaries</a>.</p>
             <br>
-            <img src="../Course-Images/course2.jfif" alt="" height="200">
+            <img src="../Course-Images/course_image2.jfif" alt="" height="200">
             <br>
             <button type="submit">Buy now</button>
             <hr>
@@ -78,7 +78,7 @@
             <b>Resources:</b> <a href="https://docs.python.org/3/" target="_blank">Python documentation ,</a> <a
                 href="https://www.w3schools.com/java/default.asp">W3Schools Java Tutorials</a>
             <br><br><br>
-            <img src="../Course-Images/course4.jfif" alt="" height="200">
+            <img src="../Course-Images/course_image3.jfif" alt="" height="200">
             <br>
             <button type="submit">Buy now</button>
             <hr>
