--- a/HTML-Pages/contact.html
+++ b/HTML-Pages/contact.html
@@ -25,9 +25,9 @@
             <button type="submit">Submit</button>
         </form>
         <br>
-        <img src="../Contact-image/contact2.png" alt="" height="200">
-        <img src="../Contact-image/contact1.jfif" alt="" height="200">
-        <img src="../Contact-image/contact3.jfif" alt="" height="200">
+        <img src="../Contact-image/contact_image2.png" alt="" height="200">
+        <img src="../Contact-image/contact_image1.jfif" alt="" height="200">
+        <img src="../Contact-image/contact_image3.jfif" alt="" height="200">
         
     </div>
 </body>
