Edited HTML and applied CSS

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <div class="nav-items">
                 <ul>
                     <li>
-                        <h2><a href="./courses.html" target="_parent">Courses</a> </h2>
+                        <h2><a href="/HTML/courses.html" target="_parent">Courses</a> </h2>
                     </li>
                     <li>
-                        <h2><a href="./about.html" target="_parent">About Me</a> </h2>
+                        <h2><a href="/HTML/about.html" target="_parent">About Me</a> </h2>
                     </li>
                     <li>
-                        <h2><a href="./contact.html" target="_parent">Contact Me</a> </h2>
+                        <h2><a href="/HTML/contact.html" target="_parent">Contact Me</a> </h2>
                     </li>
                 </ul>
             </div>
