--- a/HTML/about.html
+++ b/HTML/about.html
@@ -6,15 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="/CSS/about.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_name" />
 </head>
 
 <body>
     <div class="about-container">
+        <nav>
+            <div class="logo">
+                <a href="/index.html" target="_self">
+                    <span class="material-symbols-outlined">
+                        home
+                    </span>
+                </a>
+            </div>
+        </nav>
         <header>
             <h1>About Us</h1>
             <h2>Meet Your Mentor</h2>
         </header>
-        <section class="about-content">
+        <div class="about-content">
             <div class="mentor-intro">
                 <img src="../About-Images/about_images3.jfif" alt="Mentor Image" class="mentor-image">
                 <p>
@@ -39,7 +50,7 @@
                 <img src="../About-Images/about_images1.jfif" alt="About Image 1">
                 <img src="../About-Images/about_images2.jfif" alt="About Image 2">
             </div>
-        </section>
+        </div>
         <footer>
             <p>Connect with us:</p>
             <div class="social-icons">
