--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
     <link rel="stylesheet" href="/CSS/contact.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_name" />
 </head>
 
 <body>
     <div class="contact-container">
         <header>
+            <div class="logo">
+                <a href="/index.html" target="_self">
+                    <span class="material-symbols-outlined">
+                        home
+                    </span>
+                </a>
+            </div>
             <h1>Contact Me</h1>
             <h2>Let’s Stay Connected</h2>
         </header>
@@ -29,15 +38,25 @@
             </div>
             <div class="form-group">
                 <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" placeholder="Write your message here" required></textarea>
+                <textarea id="message" name="message" rows="5" placeholder="Write your message here"
+                    required></textarea>
             </div>
             <button type="submit" class="submit-btn">Submit</button>
         </form>
-        <div class="contact-images">
-            <img src="../Contact-image/contact_image2.png" alt="Contact Image 1">
-            <img src="../Contact-image/contact_image1.jfif" alt="Contact Image 2">
-            <img src="../Contact-image/contact_image3.jfif" alt="Contact Image 3">
-        </div>
+        <footer>
+            <p>Connect with us:</p>
+            <div class="social-icons">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png" alt="Facebook Logo">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram Logo">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="/Assets/twitter_logo.png" alt="Twitter Logo">
+                </a>
+            </div>
+        </footer>
     </div>
 </body>
 
