--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses - Digital Guru</title>
     <link rel="stylesheet" href="/CSS/courses.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_name" />
 </head>
 
 <body>
     <header>
+
         <h1>Courses Offered</h1>
     </header>
     <div class="container">
@@ -21,7 +24,13 @@
                 <option value="program">Programming</option>
             </select>
         </div>
-
+        <div class="logo">
+            <a href="/index.html" target="_parent">
+                <span class="material-symbols-outlined">
+                    home
+                </span>
+            </a>
+        </div>
         <div class="course">
             <h2>Web Development</h2>
             <p><strong>Description:</strong> Learn the essentials of web design and development. This course covers
@@ -43,7 +52,8 @@
 
         <div class="course">
             <h2>Mathematics Simplified</h2>
-            <p><strong>Description:</strong> Strengthen your math foundations, from basic algebra to advanced calculus.</p>
+            <p><strong>Description:</strong> Strengthen your math foundations, from basic algebra to advanced calculus.
+            </p>
             <p><strong>Topics Covered:</strong></p>
             <ul>
                 <li>Algebra and Geometry basics.</li>
@@ -70,8 +80,10 @@
             <p><strong>Target Audience:</strong> Absolute beginners</p>
             <p><strong>Duration:</strong> 4 weeks</p>
             <p><strong>Cost:</strong> Rs. 20,000</p>
-            <p><strong>Resources:</strong> <a href="https://docs.python.org/3/" target="_blank">Python documentation</a>,
-                <a href="https://www.w3schools.com/java/default.asp" target="_blank">W3Schools Java Tutorials</a></p>
+            <p><strong>Resources:</strong> <a href="https://docs.python.org/3/" target="_blank">Python
+                    documentation</a>,
+                <a href="https://www.w3schools.com/java/default.asp" target="_blank">W3Schools Java Tutorials</a>
+            </p>
             <img src="../Course-Images/course_image3.jfif" alt="Programming Basics" class="course-image">
             <button class="buy-btn">Buy Now</button>
         </div>
