Some modification applied

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -11,61 +11,85 @@
 </head>
 
 <body>
-    <div class="about-container">
+    <div class="container">
         <nav>
+
             <div class="logo">
-                <a href="/index.html" target="_self">
-                    <span class="material-symbols-outlined">
-                        home
-                    </span>
-                </a>
+
+                <img src="/Homepage-Images/image.png" alt="" srcset="">
+
             </div>
+            <div class="nav-items">
+                <ul>
+                    <li>
+                        <h2><a href="/index.html" target="_parent">Home</a> </h2>
+                    </li>
+                    <li>
+                        <h2><a href="/HTML/courses.html" target="_parent">Courses</a> </h2>
+                    </li>
+                    <li>
+                        <h2><a href="/HTML/about.html" target="_parent">About</a> </h2>
+                    </li>
+                    <li>
+                        <h2><a href="/HTML/contact.html" target="_parent">Contact</a> </h2>
+                    </li>
+                </ul>
         </nav>
-        <header>
-            <h1>About Us</h1>
-            <h2>Meet Your Mentor</h2>
-        </header>
-        <div class="about-content">
-            <div class="mentor-intro">
-                <img src="../About-Images/about_images3.jfif" alt="Mentor Image" class="mentor-image">
-                <p>
-                    Hello, I’m <b>Suman Pandey</b>, the founder of "<b><i>Digital Guru</i></b>". With over 5 years of
-                    teaching
-                    experience and a passion for education, I’m dedicated to making learning accessible and enjoyable
-                    for
-                    everyone. I’ve worked with diverse students, helping them overcome challenges and achieve their
-                    goals.
-                </p>
-                <p>
-                    At "<b><i>Digital Guru</i></b>", my teaching approach emphasizes clarity, practicality, and
-                    engagement,
-                    ensuring learners apply concepts effectively in real-life scenarios. I believe education is a tool
-                    for
-                    transformation, unlocking potential and inspiring creativity. Together, let’s embrace learning and
-                    achieve
-                    remarkable success.
-                </p>
+        <div class="about-container">
+
+            <header>
+                <h1>About Us</h1>
+                <h2>Meet Your Mentor</h2>
+            </header>
+            <div class="about-content">
+                <div class="mentor-intro">
+                    <img src="../About-Images/about_images3.jfif" alt="Mentor Image" class="mentor-image">
+                    <p>
+                        Hello, I’m <b>Suman Pandey</b>, the founder of "<b><i>e-Learning</i></b>". With over 5 years
+                        of
+                        teaching
+                        experience and a passion for education, I’m dedicated to making learning accessible and
+                        enjoyable
+                        for
+                        everyone. I’ve worked with diverse students, helping them overcome challenges and achieve their
+                        goals.
+                    </p>
+                    <p>
+                        At "<b><i>e-Learning</i></b>", my teaching approach emphasizes clarity, practicality, and
+                        engagement,
+                        ensuring learners apply concepts effectively in real-life scenarios. I believe education is a
+                        tool
+                        for
+                        transformation, unlocking potential and inspiring creativity. Together, let’s embrace learning
+                        and
+                        achieve
+                        remarkable success.
+                    </p>
+                </div>
+                <div class="additional-images">
+                    <img src="../About-Images/about_images1.jfif" alt="About Image 1">
+                    <img src="../About-Images/about_images2.jfif" alt="About Image 2">
+                </div>
             </div>
-            <div class="additional-images">
-                <img src="../About-Images/about_images1.jfif" alt="About Image 1">
-                <img src="../About-Images/about_images2.jfif" alt="About Image 2">
-            </div>
+            <footer>
+                <p>Connect with us:</p>
+                <div class="social-icons">
+                    <a href="https://facebook.com" target="_blank">
+                        <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png" alt="Facebook Logo">
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram Logo">
+                    </a>
+                    <a href="https://twitter.com" target="_blank">
+                        <img src="/Assets/twitter_logo.png" alt="Twitter Logo">
+                    </a>
+                </div>
+            </footer>
         </div>
-        <footer>
-            <p>Connect with us:</p>
-            <div class="social-icons">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png" alt="Facebook Logo">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram Logo">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="/Assets/twitter_logo.png" alt="Twitter Logo">
-                </a>
-            </div>
-        </footer>
     </div>
+    <footer>
+        <p>&copy; 2025 e-Learning. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
