--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Guru</title>
+    <title>e-Learning</title>
     <link rel="stylesheet" href="/CSS/index.css">
 </head>
 
@@ -19,6 +19,9 @@
             </div>
             <div class="nav-items">
                 <ul>
+                    <li>
+                        <h2><a href="index.html" target="_parent">Home</a> </h2>
+                    </li>
                     <li>
                         <h2><a href="/HTML/courses.html" target="_parent">Courses</a> </h2>
                     </li>
@@ -38,20 +41,18 @@
         </nav>
         <div class="content-body">
             <div class="heading">
-                <h1>Welcome to "<i>Digital Guru</i>" offical website.</h1>
+                <h1>Welcome to "<i>e-Learning</i>" offical website.</h1>
             </div>
-            <div class="second-heading">
-                <h2>Your Path to Knowledge Starts Here</h2>
-            </div>
+
             <div class="paragraph">
                 <div class="paragraph-content">
 
-                    <p>Welcome to Digital Guru, your go-to platform for personalized learning and skill enhancement. We
+                    <p>Welcome to e-Learning, your go-to platform for personalized learning and skill enhancement. We
                         are
                         here
                         to
                         guide you every step of the way in your educational journey.
-                        At Digital Guru, we believe in empowering learners through personalized teaching and valuable
+                        At e-Learning, we believe in empowering learners through personalized teaching and valuable
                         resources.
                         Explore our courses, get to know your mentor, and begin your journey to excellence today.
                     </p>
@@ -78,7 +79,7 @@
 
     </div>
     <footer>
-        <p>&copy; 2025 Digital Guru. All rights reserved.</p>
+        <p>&copy; 2025 e-Learning. All rights reserved.</p>
     </footer>
 </body>
 
