--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -4,17 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Courses - Digital Guru</title>
+    <title>Courses - e-Learning</title>
     <link rel="stylesheet" href="/CSS/courses.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_name" />
 </head>
 
 <body>
-    <header>
 
-        <h1>Courses Offered</h1>
-    </header>
+    <nav>
+
+        <div class="logo">
+
+            <img src="/Homepage-Images/image.png" alt="" srcset="">
+        </div>
+        <div class="nav-items">
+            <ul>
+                <li>
+                    <h2><a href="/index.html" target="_parent">Home</a> </h2>
+                </li>
+                <li>
+                    <h2><a href="/HTML/courses.html" target="_parent">Courses</a> </h2>
+                </li>
+                <li>
+                    <h2><a href="/HTML/about.html" target="_parent">About</a> </h2>
+                </li>
+                <li>
+                    <h2><a href="/HTML/contact.html" target="_parent">Contact</a> </h2>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <div class="dropdown">
             <label for="courses">Our Courses:</label>
@@ -23,13 +44,6 @@
                 <option value="math">Mathematics</option>
                 <option value="program">Programming</option>
             </select>
-        </div>
-        <div class="logo">
-            <a href="/index.html" target="_parent">
-                <span class="material-symbols-outlined">
-                    home
-                </span>
-            </a>
         </div>
         <div class="course">
             <h2>Web Development</h2>
@@ -47,7 +61,7 @@
             <p><strong>Resources:</strong> <a href="https://www.w3schools.com/html" target="_blank">W3Schools
                     HTML Tutorials</a></p>
             <img src="../Course-Images/course_image1.jpg" alt="Web Development" class="course-image">
-            <button class="buy-btn">Buy Now</button>
+            <button class="buy-btn">Enroll Now</button>
         </div>
 
         <div class="course">
@@ -65,7 +79,7 @@
             <p><strong>Resources:</strong> <a href="https://abakcus.com/25-beautiful-math-documentaries-to-love-math/"
                     target="_blank">25 Beautiful Math Documentaries</a></p>
             <img src="../Course-Images/course_image2.jfif" alt="Mathematics Simplified" class="course-image">
-            <button class="buy-btn">Buy Now</button>
+            <button class="buy-btn">Enroll Now</button>
         </div>
 
         <div class="course">
@@ -85,11 +99,11 @@
                 <a href="https://www.w3schools.com/java/default.asp" target="_blank">W3Schools Java Tutorials</a>
             </p>
             <img src="../Course-Images/course_image3.jfif" alt="Programming Basics" class="course-image">
-            <button class="buy-btn">Buy Now</button>
+            <button class="buy-btn">Enroll Now</button>
         </div>
     </div>
-    <footer>
-        <p>&copy; 2025 Digital Guru. All rights reserved.</p>
+    <footer class="copyright">
+        <p>&copy; 2025 e-Learning. All rights reserved.</p>
     </footer>
 </body>
 
