Some modification are done.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 </ul>
             </div>
             <div class="buttons">
-                <Button class="sign-up ">Sign Up</Button>
+                <a href="/HTML/DMA.HTML"><Button class="sign-up blog">Read Blog</Button></a>
+                
                 <Button class="login">Login</Button>
 
             </div>
